tests/fail/non_display.rs
#[log_attributes::log(info, "{fn} was executed: {return}")]
fn non_display() {}

fn main() {}
