tests/fail/non_display.stderr
error[E0277]: `()` doesn't implement `std::fmt::Display`
 --> tests/fail/non_display.rs:2:18
  |
1 | #[log_attributes::log(info, "{fn} was executed: {return}")]
  | ----------------------------------------------------------- in this procedural macro expansion
2 | fn non_display() {}
  |                  ^^ `()` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `()`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `format_args` (in Nightly builds, run with -Z macro-backtrace for more info)
